// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Chapter > content 1`] = `
[
  {
    "content": [
      "some",
      "text",
      "",
    ],
    "name": "aside",
    "type": "talk",
  },
  {
    "content": [
      "some",
      "text",
      "",
    ],
    "name": "hero",
    "type": "talk",
  },
]
`;

exports[`Chapter > duplicated name 1`] = `
{
  "characters": Map {
    "some" => null,
  },
  "keys": [
    "some",
    "some",
  ],
  "memory": [],
}
`;

exports[`Chapter > pause 1`] = `
[
  {
    "content": [
      "some",
      {
        "args": {
          "ms": 10,
        },
        "type": "pause",
      },
      "",
      "",
      {
        "args": {
          "ms": 10,
        },
        "type": "pause",
      },
      "",
      {
        "args": {
          "ms": 10,
        },
        "type": "pause",
      },
      "text",
      {
        "args": {
          "ms": 10,
        },
        "type": "pause",
      },
      "",
      "",
      {
        "args": {
          "ms": 10,
        },
        "type": "pause",
      },
      "",
    ],
    "name": "aside",
    "type": "talk",
  },
  {
    "content": [
      "some",
      "text",
      "",
    ],
    "name": "hero",
    "type": "talk",
  },
]
`;
